# agent-core-api

./: app.py  main.py  pyproject.toml
src/agents/: analysis_agent.py  base_agent.py  base_agents.py
src/config/: settings.py
src/models/: agent_response.py  agents.py  analysis.py  tasks.py
src/routes/: chat.py
src/services/: agents.py  ai.py  tasks.py  weather.py
